--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Parisienne";
+  src: url("/font/Parisienne-Regular.ttf") format("truetype");
+  font-weight: normal;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
